# pymod

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pymod/: cli.py  installer.py  manifest.py  venv.py
